2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c: Reformatted the PAM code. Hopefully it still works.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c: Rearranged code for clarity, plugged a memory leak
	and fixed a memory freeing bug (memory was being freed twice).

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c: Merged smsbox_req.c into smsbox.c, because they
	called each other backwards and forwards and the merged file is
	small enough to be manageable, so there's no point in keeping
	them separate.
	
	* gw/smsbox.h, gw/smsbox_req.[ch]: Removed.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox_req.c: Rearranged code to be somewhat clearer.
	
	* gw/smsbox.c: Removed ancient file comment.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox_req.c: Rewrote SMS splitting so that it is hopefully
	now somewhat more understandable.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* gw/smsc_emi.c: Avoid NULL pointer dereference if sender has
	not been set. Thanks to Armin Hurm for finding this.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/userguide.xml: Explain the syslog-level variable
	for wabpox.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

	* README: Moved information from doc/platforms/FAQ.solaris to
	README, because the goal is to reduce the number of places one
	has to look for documentation, not increase it. Whoever put the
	file in CVS didn't even document it in the ChangeLog.
	
	* doc/platforms/FAQ.solaris: Removed.

2000-12-01  Richard Braakman  <dark@wapit.com>

	* gw/heartbeat.c: Fix busy-loop in heartbeat thread.

2000-12-01  Lars Wirzenius  <liw@iki.fi>

	* contrib/php-admin/*: Added PHP administration stuff and
	sendota/sendvcard/etc stuff from Bjarne Saltbaek.

2000-12-01  Lars Wirzenius  <liw@iki.fi>

	* configure.in: Accept libxml 2.2.10. (Untested, since I don't
	have 2.2.10 yet.)

2000-11-29  Richard Braakman  <dark@wapit.com>

	* wap/wap_events.*: Gave events pretty names, for logging.